# Python-Web-Development

./: .gitignore  README.md
client/: .gitignore  pyproject.toml  rxconfig.py
client/client/: client.py
server/: manage.py  pyproject.toml
server/server/: api.py  settings.py  urls.py
